[package]
name = "directory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["log"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.2", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
serde_yaml = "0.9"
include_dir = "0.7"
regex = "1.6"
once_cell = "1.6"

[dev-dependencies]
pretty_env_logger = "0.4"
