[package]
name = "directory"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["log"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.3", features = ["serde"] }
thiserror = "1.0"
eyre = "0.6"
serde_norway = "0.9"

include_dir = "0.7"
regex = "1.7"
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
pretty_env_logger = "0.5"
serde_json = "1.0"
